# tarot-api

./: .dockerignore  .env.example  .gitignore  Containerfile  DETAIL.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  deps.py  errors.py  logging.py  middleware.py  rate_limit.py  security.py
app/routers/: cards.py  health.py  reading.py
app/schemas/: cards.py  reading.py
app/services/: deck_loader.py  interpret_service.py  reading_api_service.py  reading_repository.py  reading_service.py
app/utils/: rand.py
data/: meanings.en.json  meanings.ja.json  meanings.ko.json  tarot-images.json
scripts/: cache_archive_images.py  cache_card_images.py  fetch_commons_cards.py  fetch_tarot_images.py  map_commons_and_cache.py
tests/: test_cards.py  test_health.py  test_observability.py  test_reading.py  test_validation.py
