[tool.poetry]
name = "tarot-api"
version = "0.1.0"
description = "FastAPI-based Tarot reading API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.111.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
httpx = ">=0.27.0"
slowapi = ">=0.1.9"
psycopg = { version = ">=3.2.0", extras = ["binary"] }
Pillow = ">=10.0.0"
google-generativeai = ">=0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.4.0"
black = ">=24.4.0"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL"]
ignore = ["E501"]
per-file-ignores = {"app/services/interpret_service.py" = ["PLR0912", "PLR0915"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"